css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap");

/* global styles  */

html {
  scroll-behavior: smooth;
}

.blue-section {
  background: #674bff;
}
.white-section {
  background: #fff;
}

.big-font {
  font-size: 2.5em;
  line-height: 1.5;
  font-weight: bold;
  color: #fff;
  width: 280px;
  margin-top: 10%;
}

.download-button {
  margin: 3% 2% 5% 0;
}
/* title section  */

#title {
  padding-left: 10%;
}
/* title navbar  */

.navbar-brand {
  font-family: Ubuntu;
  font-weight: bold;
}

.nav-link {
  font-family: cursive;
  font-size: 1.2rem;
}
.navbar-nav {
  padding-right: 15%;
}

/* title section body  */
.title-image {
  width: 30%;
  max-width: 250px;
  transform: rotate(25deg);
  transition: 0.31s;
  position: absolute;
  right: 20%;
}

/* features section  */

#features {
  padding: 7% 15%;
  position: relative;
}

.icon {
  color: #674bff;
}

.feature-element {
  padding: 4.5%;
}
.feature-title {
  font-weight: bold;
}

/* press section  */

#press {
  padding-bottom: 3%;
}
.press-logo {
  width: 15%;
  padding: 1% 1%;
}

/* testimonial section  */

.carousel-item {
  padding: 7% 15%;
}
.testimonial-image {
  width: 15%;
  border-radius: 125%;
  margin: 20px;
}
.testimonial-title {
  font-size: 34px;
  font-weight: 700;
  color: black;
}
.testimonial-subtitle {
  color: white;
}

/* pricing section  */

#pricing {
  padding: 100px;
  text-align: center;
}
.price {
  padding: 3% 2%;
}

/* call to action section  */

.cta-title {
  font-size: 3.5em;
  line-height: 1.5;
  font-weight: bold;
  padding-top: 4%;
  color: #fff;
}

/* footer section */

#footer {
  padding: 7% 15% 0;
  margin-bottom: 0;
}
.social-icon {
  margin: 0% 2% 3% 2%; /*  margin: top right bottom left */
  text-align: center;
  color: #292e32;
}
.social-copy {
  margin-bottom: 10%;
  font-size: small;
}

@media screen and (max-width: 1024px) {
  .title-image {
    width: auto;
    max-width: 400px;
    position: static;
    transform: rotate(0);
  }

  #title {
    text-align: center;
    height: auto;
    padding: 0%;
  }
  .big-font {
    width: auto;
  }
  .cta-title {
    font-size: 2.5rem;
  }
  .container-fluid {
    padding: 3% 15% !important;
  }
}

